Start to make feature makes possible for users choose avatar

--- a/views/settings.phtml
+++ b/views/settings.phtml
@@ -11,15 +11,20 @@
         <section class="border border-2 border-primary p-4">  
             <form method="POST">
                 <div class="block_login mb-3">
+                    <label for="form_avatar" class="form-label">Pick avatar:</label>
+                    <input name="avatar" type="file" class="form-control" id="form_avatar" required>
+                </div>
+
+                <!-- <div class="block_login mb-3">
                     <label for="login" class="form-label">Enter new login:</label>
                     <input name="login" type="text" class="form-control" required>
                 </div>
-        
+
                 <div class="mb-3">
                     <label for="password" class="form-label">Enter new password:</label>
                     <input name="password" type="password" class="form-control" required>
-                </div>
-        
+                </div> -->
+
                 <div class="flex">
                     <input name="submit" type="submit" value="Save" class="btn btn-primary">
                 </div>
