--- a/views/chat.phtml
+++ b/views/chat.phtml
@@ -58,7 +58,7 @@
             </ul>
         </div>
         <div class="container p-3 border-top border-3">
-            <form method="post" action="/chat.php" class="row  d-flex justify-content-center" >
+            <form method="post" action="index.php?page=chat" class="row  d-flex justify-content-center" >
                 <div class="col-9">
                     <input type="text" name="message" class="form-control" id="input_message">
                 </div>
